--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "node spec"
   },
+  "dependencies":{
+    "appstack":"0.x.x",
+    "em.js":"0.x.x",
+    "ds":"0.x.x"
+  },
   "repository": {
     "type": "git",
     "url": "http://github.com/influx6/stream.js"
